--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ body.dark {
     z-index: 9999;
     background: black;
     display: flex;
+    flex-direction: column;
+    gap: 20px;
+
     align-items: center;
     justify-content: center;
 }
@@ -52,6 +55,15 @@ body.dark {
 #stop-btn {
     font-size: 24px;
     padding: 20px 40px;
+    border-radius: 50px;
+    background: #3232326f;
+    color: rgb(89, 89, 89);
+    border: 2px solid rgb(89, 89, 89);
+}
+
+#pause-btn {
+    font-size: 24px;
+    padding: 10px 20px;
     border-radius: 50px;
     background: #3232326f;
     color: rgb(89, 89, 89);
@@ -287,6 +299,15 @@ body.dark {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.profile-figure {
+    color: var(--text-accent);
+}
+
+.profile-header {
+    color: var(--text-main);
+    font-weight: 500;
 }
 
 #profile-name {
