--- a/style.css
+++ b/style.css
@@ -202,6 +202,49 @@ body.dark {
     margin: 40px auto 0;
 }
 
+#fuel-price-box {
+    width: 77px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: var(--bg-panel);
+    box-shadow: 0 0px 10px 0 var(--shadow);
+
+    position: fixed;
+    top: 17%;
+    left: 22%;
+    transform: translate(-50%, -50%);
+}
+
+#fuel-icon {
+    width: 25px;
+    height: 25px;
+    border-radius: 15px;
+
+    background-image: url(E10-fuel-label.png);
+    background-size: cover;
+    background-position: center;
+
+    position: fixed;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+}
+
+#fuel-price {
+    width: 40px;
+    height: 25px;
+
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+
+    position: fixed;
+    top: 46%;
+    left: 66%;
+    transform: translate(-50%, -50%);
+}
+
+
 .main-content-panel {
     width: min(80vw, 900px);
     padding: 5px 5px 5px;
